--- a/GeometryTunes/GeometryTunes/en.lproj/ViewController.xib
+++ b/GeometryTunes/GeometryTunes/en.lproj/ViewController.xib
@@ -117,8 +117,9 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<float key="IBUIValue">1</float>
-						<float key="IBUIMaxValue">5</float>
+						<float key="IBUIValue">60</float>
+						<float key="IBUIMinValue">10</float>
+						<float key="IBUIMaxValue">300</float>
 					</object>
 					<object class="IBUILabel" id="28868202">
 						<reference key="NSNextResponder" ref="766721923"/>
